@@ -9,9 +9,10 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
     implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
     implementation("org.apache.commons:commons-text:1.9")
+    implementation("com.github.cs125-illinois.questioner:agent:$version")
 
     api("com.github.cs125-illinois.jeed:core:2022.3.1")
-    api("com.github.cs125-illinois:jenisol:2022.3.0")
+    api("com.github.cs125-illinois:jenisol:2022.3.1a1")
     api("io.kotest:kotest-runner-junit5:4.6.3")
     api("com.google.truth:truth:1.1.3")
     api("com.github.cs125-illinois:libcs1:2022.1.0")
@@ -25,6 +26,13 @@ tasks {
         add("archives", sourcesJar)
     }
 }
+configurations.runtimeClasspath {
+    val agentArtifact = resolvedConfiguration.resolvedArtifacts.find { it.name == "agent" }!!
+    val agentJar = agentArtifact.file.absolutePath
+    tasks.withType(Test::class.java) {
+        jvmArgs("-javaagent:$agentJar")
+    }
+}
 publishing {
     publications {
         create<MavenPublication>("lib") {
@@ -34,10 +42,4 @@ publishing {
 }
 kapt {
     includeCompileClasspath = false
-    javacOptions {
-        option("--illegal-access", "permit")
-    }
-}
-kotlin {
-    kotlinDaemonJvmArgs = listOf("-Dfile.encoding=UTF-8", "--illegal-access=permit")
 }
